# image-processing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: CommandOptions.h  Constants.h  Constants.hpp  FourierProcessor.h  GrayscaleImageProcessor.h  HistogramProcessor.h  ImageComparer.cpp  ImageComparer.h  ImageProcessor.h  InputProcessor.h  Masks.hpp  MorphologicalProcessor.h  OutputManager.h  RGBImageProcessor.cpp  RGBImageProcessor.h  SpatialDomainProcessor.h
include/channel-operations/: BandCutOperation.h  BandPassOperation.h  ContrastGammaOperation.h  ContrastLinearOperation.h  FastFourierOperation.h  FlipDiagonallyOperation.h  FlipHorizontallyOperation.h  FlipVerticallyOperation.h  FourierOperation.h  HighPassOperation.h  HistogramEqualizationOperation.h  HistogramVisualizationOperation.h  LowPassOperation.h  MidpointFilterOperation.h  PhaseShiftOperation.h  ResizeOperation.h
include/image-processing-lib/: FourierProcessor.h  HistogramProcessor.h  MorphologicalProcessor.h  SpatialDomainProcessor.h
include/input-processing-lib/: CommandMapping.h  CommandOptions.h  CommandParser.h  InputProcessor.h  Masks.h  OutputManager.h
include/operations/: ImageOperation.h
include/operations/channel-operations/: ArithmeticMeanFilterOperation.h  BandCutOperation.h  BandPassOperation.h  BrightnessOperation.h  ContrastGammaOperation.h  ContrastLinearOperation.h  FastFourierOperation.h  FlipDiagonallyOperation.h  FlipHorizontallyOperation.h  FlipVerticallyOperation.h  FourierOperation.h  HighPassOperation.h  HistogramEqualizationOperation.h  LaplacianFilterOperation.h  LowPassOperation.h  MidpointFilterOperation.h  NegativeOperation.h  OptimizedLaplacianFilterOperation.h  PhaseShiftOperation.h  ResizeOperation.h  RobertsOperation.h
include/operations/whole-image-operations/: ClosingOperation.h  CompareImageStatsOperation.h  DilationOperation.h  HMTOperation.h  HistogramStatsOperation.h  HistogramVisualizationOperation.h  LaplacianFilterOperation.h  OpeningOperation.h  OptimizedLaplacianFilterOperation.h  RegionGrowingOperation.h  RobertsOperation.h
include/whole-image-operations/: CompareImageStatsOperation.h  HistogramStatsOperation.h  HistogramVisualizationOperation.h  LaplacianFilterOperation.h  OpeningOperation.h  OptimizedLaplacianFilterOperation.h  RobertsOperation.h
src/: CommandParser.cpp  FourierProcessor.cpp  GrayscaleImageProcessor.cpp  HistogramProcessor.cpp  ImageComparer.cpp  ImageProcessor.cpp  InputProcessor.cpp  MorphologicalProcessor.cpp  OutputManager.cpp  RGBImageProcessor.cpp  SpatialDomainProcessor.cpp  main.cpp
src/ChannelOperations/: ArithmeticMeanFilterOperation.cpp  BrightnessOperation.cpp  FlipHorizontallyOperation.cpp  MidpointFilterOperation.cpp  NegativeOperation.cpp
src/WholeImageOperations/: OptimizedLaplacianFilterOperation.cpp  RegionGrowingOperation.cpp  RobertsOperation.cpp
src/channel-operations/: ArithmeticMeanFilterOperation.cpp  BandCutOperation.cpp  BandPassOperation.cpp  BrightnessOperation.cpp  ContrastGammaOperation.cpp  ContrastLinearOperation.cpp  FastFourierOperation.cpp  FlipDiagonallyOperation.cpp  FlipVerticallyOperation.cpp  FourierOperation.cpp  HighPassOperation.cpp  HistogramEqualizationOperation.cpp  HistogramVisualizationOperation.cpp  LowPassOperation.cpp  NegativeOperation.cpp  PhaseShiftOperation.cpp  ResizeOperation.cpp
src/histogram-operations/: HistogramEqualizationOperation.cpp  HistogramStatsOperation.cpp  HistogramVisualizationOperation.cpp
src/image-processing-lib/: FourierProcessor.cpp  HistogramProcessor.cpp  ImageComparer.cpp  MorphologicalProcessor.cpp  SpatialDomainProcessor.cpp
src/input-processing-lib/: CommandParser.cpp  InputProcessor.cpp  OutputManager.cpp
src/morphological-operations/: ClosingOperation.cpp  DilationOperation.cpp  ErosionOperation.cpp  HMTOperation.cpp  OpeningOperation.cpp
src/stats-operations/: CompareImageStatsOperation.cpp
src/whole-image-operations/: ClosingOperation.cpp  CompareImageStatsOperation.cpp  DilationOperation.cpp  ErosionOperation.cpp  HMTOperation.cpp  HistogramStatsOperation.cpp  LaplacianFilterOperation.cpp  OpeningOperation.cpp  RegionGrowingOperation.cpp
tests/: GrayscaleImageProcessorTests.cpp  HistogramProcessorTests.cpp  ImageComparerTests.cpp  ImageProcessorTests.cpp  MorphologicalProcessorTests.cpp  RGBImageProcessorTests.cpp  SpatialDomainProcessorTests.cpp
